not registered users also logged
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:13:44.513 as Changeset 963

--- a/SnakeWorld Highscore Web/App_Data/languages/cs-cz.xml
+++ b/SnakeWorld Highscore Web/App_Data/languages/cs-cz.xml
@@ -13,5 +13,7 @@
   <string key="stats_day" title="">Dnes</string>
   <string key="stats_week" title="">Od neděle</string>
   <string key="stats_month" title="">Tento měsíc</string>
+
+  <string key="unregistered" title="">(Neregistrovaní)</string>
   
 </language>
