highscore unregistered style
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:13:46.203 as Changeset 967

--- a/SnakeWorld Highscore Web/App_Data/languages/cs-cz.xml
+++ b/SnakeWorld Highscore Web/App_Data/languages/cs-cz.xml
@@ -14,6 +14,6 @@
   <string key="stats_week" title="">Od neděle</string>
   <string key="stats_month" title="">Tento měsíc</string>
 
-  <string key="unregistered" title="">(Neregistrovaní)</string>
+  <string key="unregistered" title="">Neregistrovaní</string>
   
 </language>
