--- a/SnakeWorld Highscore Web/App_Data/languages/en-us.xml
+++ b/SnakeWorld Highscore Web/App_Data/languages/en-us.xml
@@ -14,6 +14,6 @@
   <string key="stats_week" title="">This week</string>
   <string key="stats_month" title="">This month</string>
 
-  <string key="unregistered" title="">(Not registered)</string>
+  <string key="unregistered" title="">Not registered</string>
 
 </language>
