apples count in highscore
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:13:56.263 as Changeset 981

--- a/SnakeWorld Highscore Web/App_Data/languages/cs-cz.xml
+++ b/SnakeWorld Highscore Web/App_Data/languages/cs-cz.xml
@@ -3,6 +3,7 @@
   <string key="username" title="">Jméno</string>
   <string key="bestscore" title="">Nejlepší score</string>
   <string key="playscount" title="">Počet her</string>
+  <string key="apples" title="">Jablek</string>
   <string key="kills" title="">Zabito hadů</string>
   <string key="suicides" title="">Sebevražd</string>
   <string key="playtime" title="">Čas celkem</string>
