--- a/SnakeWorld Highscore Web/App_Data/languages/en-us.xml
+++ b/SnakeWorld Highscore Web/App_Data/languages/en-us.xml
@@ -3,6 +3,7 @@
   <string key="username" title="">User name</string>
   <string key="bestscore" title="">Best score</string>
   <string key="playscount" title="">Plays count</string>
+  <string key="apples" title="">Apples</string>
   <string key="kills" title="">Kills</string>
   <string key="suicides" title="">Suicides</string>
   <string key="playtime" title="">Total time</string>
