- textures added - more DX10 grass - going forward fixed
Originally checked in by DEVSENSE\Administrator on 2011-02-20 12:14:02.957 as Changeset 994

--- a/Debug/languages/1029.xml
+++ b/Debug/languages/1029.xml
@@ -43,6 +43,6 @@
   <text key="chat">Zpráva</text>
   <text key="chatflow">Nezaplavujte chat prosím ...</text>
   <text key="chatvisibility">Viditelnost diskuze</text>
-  <text key="useauthorization">Použít internetový účet (www.sacredware.com)</text>
+  <text key="useauthorization">Použít internetový účet (www.besnaked.com)</text>
 
 </language>
