--- a/Release/languages/1029.xml
+++ b/Release/languages/1029.xml
@@ -43,6 +43,6 @@
   <text key="chat">Zpráva</text>
   <text key="chatflow">Nezaplavujte chat prosím ...</text>
   <text key="chatvisibility">Viditelnost diskuze</text>
-  <text key="useauthorization">Použít internetový účet (www.sacredware.com)</text>
+  <text key="useauthorization">Použít internetový účet (www.besnaked.com)</text>
 
 </language>
